<resources>
    <string name="app_name">Submission2BFAA</string>
    <string name="app_title">Detail User</string>
    <string name="github">Github</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Input Keyword</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="repo">Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="resultRepo">12</string>
    <string name="resultFollowers">12</string>
    <string name="resultFollowing">12</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="response">-</string>
    <string name="notFound">Not Found</string>
    <string name="notFoundFollowers">There Is No One Followers</string>
    <string name="notFoundFollowing">Not Following Anyone</string>
</resources>